    - Add --save-only option to setupcon.  Closes: #420832.
    - Multiply the Installer-Menu-Item field of the udebs by 100.
      Closes: #421260.
    - By default do not use AltGr with basic US keyboard.  Closes: #421263.
    - Make sure amiga, ataritt, sun4 and sun5 are in KeyboardNames.pl even
      if they are not in the xml database.  Closes: #420821.
  * Two additions to the FAQ:
    - Add a suggestion for the VBERestore option.  Thanks to Dmitry
      Semyonov, closes: #402143.
    - Document CapsLock working as ShiftLock in Unicode mode.
  * Added Dutch translation.  Thanks to Bart Cornelis, closes: #415518.
  * Added manual page for setupcon.  Thanks to Vassilis Pandis,
    closes: #405005. 

 -- Anton Zinoviev <zinoviev@debian.org>  Sat, 28 Apr 2007 18:59:16 +0300

console-setup (1.15) unstable; urgency=low

  * Updated Georgian letters for Fixed16 and Fixed14.  Thanks to Vladimer
    Sichinava.

 -- Anton Zinoviev <zinoviev@debian.org>  Wed, 14 Mar 2007 21:50:54 +0200

console-setup (1.14) unstable; urgency=low

  * Non-maintainer upload to fix pending l10n issues.
  * Debconf translations:
    - Czech. Closes: #408602
    - Spanish. Closes: #412128
    - Galician. Closes: #413356
    - Convert French to UTF-8

 -- Christian Perrier <bubulle@debian.org>  Sun,  4 Mar 2007 19:54:11 +0100

console-setup (1.13) unstable; urgency=low

  * Unfuzzy the translations.

 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 13 Nov 2006 21:24:44 +0200

console-setup (1.12) unstable; urgency=low

  * standards.equivalents: approximate symbols used by some popular
    console applications.
  * New German translation.  Thanks to Matthias Julius, closes: #396815.
  * Updated French translation.  Thanks to Jean-Luc Coulon, closes: #398023.
  * Allign the choices of console-setup/codeset.
  * Updated Fonts/bdf/georgian16.psf (author: Gia Shervashidze).  Update
    provided by Vladimer Sichinava.

 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 13 Nov 2006 17:30:40 +0200
