@@ -1129,13 +1129,13 @@ if [ -e $CONFIGFILE ]; then
     default_codeset="`decode_codeset $CODESET`"
 
     case "$XKBLAYOUT" in
-#	lt,us)
-#	    default_layout=${XKBLAYOUT%,*}
-#	    default_variant="${XKBVARIANT%,*}"
-#	    unsupported_layout=no
-#	    ;;	    
+	lt,lt)
+	    default_layout=${XKBLAYOUT%,*}
+	    default_variant="${XKBVARIANT%,*}"
+	    unsupported_layout=no
+	    ;;	    
 	# TODO: make s.t. to not forget to update this list
-	cs,cs|us,am|us,ara|us,ben|us,bd|us,bg|us,bt|us,by|us,deva|us,ge|us,gh|us,gr|us,guj|us,guru|us,il|us,in|us,ir|us,iku|jp,jp|us,jp|us,kan|us,kh|us,la|us,lao|us,lk|us,mk|us,mm|us,mn|us,mv|us,mal|us,ori|us,pk|us,ru|us,scc|us,sy|us,syr|us,tel|us,th|us,tj|us,tam|us,ua|us,uz)
+	cs,cs|us,am|us,ara|us,ben|us,bd|us,bg|us,bt|us,by|us,deva|us,ge|us,gh|us,gr|us,guj|us,guru|us,il|us,in|us,ir|us,iku|jp,jp|us,jp|us,kan|us,kh|us,la|us,lao|us,lk|us,lt|us,mk|us,mm|us,mn|us,mv|us,mal|us,ori|us,pk|us,ru|us,scc|us,sy|us,syr|us,tel|us,th|us,tj|us,tam|us,ua|us,uz)
 	    default_layout=${XKBLAYOUT#*,}
 	    default_variant="${XKBVARIANT#*,}"
 	    unsupported_layout=no
@@ -1318,6 +1318,10 @@ while :; do
 				;;
 			esac
 			;;
+		    lt)
+			latin=no
+			real_layout=lt,lt
+			;;
 		    # TODO: make s.t. to not forget to update this list.  Don't
 		    # forget to update also the nonlatin list in kbdcompiler
 		    am|ara|ben|bd|bg|bt|by|deva|ge|gh|gr|guj|guru|il|in|ir|iku|kan|kh|la|lao|lk|mk|mm|mn|mv|mal|ori|pk|ru|scc|sy|syr|tel|th|tj|tam|ua|uz)
@@ -1345,6 +1349,15 @@ while :; do
 			*)
 			    db_set console-setup/variantcode \
 				"latin,$variant"
+			    ;;
+		    esac
+		elif [ "$real_layout" = lt,lt ]; then
+		    case "$variant" in
+			us)
+			    db_set console-setup/variantcode "us,"
+			    ;;
+			*)
+			    db_set console-setup/variantcode "$variant,us"
 			    ;;
 		    esac
 		elif [ "$real_layout" = jp,jp ]; then
